sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:15: error: not found: value j
    swap(i,j);
           ^